[package]
name = "contest"
description = "This tool takes a configuration yaml file and a list of test cases, and runs connectivity tests based on the provided configuration."
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alexeiaguiar/contest/tree/main"
authors = ["Alexei Aguiar"]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "time", "rt-multi-thread", "macros"] }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
